Return action ID when get item
