# app/static/swagger.yaml
@@ -2,11 +2,13 @@ swagger: "2.0"
 
 info:
   title: "Community Fridge"
+  version: 0.1.0
 
 paths:
   /fridges/{fridge_id}/items:
     get:
       summary: "List all items in a fridge"
+      description: ""
       parameters:
         - name: fridge_id
           in: path
@@ -25,6 +27,7 @@ paths:
                   type: string
     post:
       summary: "Put a new item to the fridge"
+      description: ""
       parameters:
         - name: fridge_id
           in: path
@@ -43,13 +46,11 @@ paths:
       responses:
         200:
           schema:
-            type: object
-            properties:
-              action_id:
-                type: integer
+            $ref: "#/definitions/ActionId"
   /items/{item_id}:
     delete:
       summary: "Get an item from the fridge"
+      description: ""
       parameters:
         - name: item_id
           in: path
@@ -63,9 +64,14 @@ paths:
             properties:
               user:
                 $ref: "#/definitions/User"
+      responses:
+        200:
+          schema:
+            $ref: "#/definitions/ActionId"
   /actions/{action_id}/picture:
     put:
       summary: "Upload picture for an action"
+      description: ""
       parameters:
         - name: action_id
           in: path
@@ -76,6 +82,9 @@ paths:
           required: true
           type: file
           description: "The picture in JPEG format"
+      responses:
+        204:
+          description: No Content
 
 definitions:
   User:
@@ -85,3 +94,8 @@ definitions:
         type: string
       password:
         type: string
+  ActionId:
+    type: object
+    properties:
+      action_id:
+        type: integer
